# tiny-fsm

./: .clang-format  .gitignore  meson.build
examples/: meson.build
examples/lockable_door/: example.cpp  meson.build
examples/simple_door/: example.cpp  meson.build
examples/stringify/: Door.hpp  example.cpp  meson.build
include/: meson.build
include/tiny-fsm/: actions.hpp  state_machine.hpp
include/tiny-fsm/actions/: by_default.hpp  invoke_callback.hpp  maybe.hpp  nothing.hpp  on.hpp  one_of.hpp  transition_to.hpp  utils.hpp  will.hpp
include/tiny-fsm/types/: types.hpp  utils.hpp
include/tiny-fsm/utils/: array_utils.hpp  static_string.hpp
tests/: meson.build  state_machine_test.cpp
